6-microservices/service-c/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-c
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: service-c
